--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "business marketplace application",
   "main": "server.js",
   "scripts": {
-    "test": "test",
+    "scripts": { "test": "jasmine" },
     "start": "node server.js"
   },
   "repository": {
@@ -24,5 +24,8 @@
   "homepage": "https://github.com/dlowkeen/rhiz#readme",
   "dependencies": {
     "express": "^4.16.3"
+  },
+  "devDependencies": {
+    "jasmine": "^3.1.0"
   }
 }
