concurrently running front end & back end servers

--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "server.js",
   "scripts": {
     "scripts": "test",
-    "start": "node server.js",
+    "start": "node index.js",
+    "server": "nodemon index.js --prefix server",
+    "client": "npm run start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "test": "jasmine"
   },
   "repository": {
@@ -28,6 +31,7 @@
     "express": "^4.16.3"
   },
   "devDependencies": {
+    "concurrently": "^3.5.1",
     "jasmine": "^3.1.0"
   }
 }
