--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "mongoose": "^5.0.10",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0"
   },
