--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "server": "nodemon index.js --prefix server",
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "test": "jasmine"
+    "test": "jasmine",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "repository": {
     "type": "git",
