changed up index/server entry point

--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "rhiz",
   "version": "1.0.0",
   "description": "business marketplace application",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "scripts": "test",
-    "start": "node server.js",
-    "server": "nodemon server.js",
+    "start": "node index.js",
+    "server": "nodemon index.js",
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "test": "jasmine",
