--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.2.0",
     "react-parallax": "^1.6.1",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
     "semantic-ui-css": "^2.3.0",
