--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     }
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-parallax": "^1.6.1",
@@ -19,6 +20,7 @@
     "react-scripts": "1.1.1",
     "react-slick": "^0.21.0",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.3.0",
     "semantic-ui-react": "^0.78.3",
     "slick-carousel": "^1.8.1"
