--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,5 +15,6 @@ jobs:
       - checkout
       - run: npm install
       - run: npm test
-
-
+      - run: NPM_CONFIG_PRODUCTION=false
+      - run: npm install --prefix client
+      - run: npm run build --prefix client
