--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,22 +1,42 @@
-version: 1
+version: 2
+jobs:
+  build:
+    working_directory: ~/repo
+    steps:
+      - checkout
+      - run: npm install
+      - run: npm test
+      - run: NPM_CONFIG_PRODUCTION=false
+      - run: npm install --prefix client
+      - run: npm run build --prefix client
 
-machine:
-  services:
-    - docker
+  deploy:
+    machine:
+        enabled: true
+    working_directory: ~/repo
+    environment:
+      HEROKU_APP: "whispering-savannah-73328"
+    steps:
+      - checkout
+      - add_ssh_keys:  # add key from CircleCI account based on fingerprint
+          fingerprints:
+            - "84:2c:60:40:f4:72:dd:52:4b:4e:ad:88:19:cb:cc:f6"
+      - run:
+          name: Setup Heroku
+          command: bash .circleci/setup-heroku.sh
 
-dependencies:
-  post:
-    - NPM_CONFIG_PRODUCTION=false
-    - npm install --prefix client
-    - npm run build --prefix client
+      - run:
+          command: |
+            git push heroku master
+            heroku run rake db:migrate
+            sleep 5  # sleep for 5 seconds to wait for dynos
+            heroku restart
 
-general:
-  branches:
-    only:
-      - master
-
-deployment:
-  prod:
-    branch: master
-    heroku:
-      appname: whispering-savannah-73328
+workflows:
+  version: 2
+  build-and-deploy:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            - build
