add branch regex

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,18 @@ jobs:
       - run: NPM_CONFIG_PRODUCTION=false
       - run: npm install --prefix client
       - run: npm run build --prefix client
+  
+  feature:
+    docker:
+      - image: circleci/node:boron
+    working_directory: ~/repo
+    steps:
+      - checkout
+      - run: npm install
+      - run: npm test
+      - run: NPM_CONFIG_PRODUCTION=false
+      - run: npm install --prefix client
+      - run: npm run build --prefix client
 
   deploy:
     machine:
@@ -29,8 +41,7 @@ jobs:
 
       - run:
           command: |
-            git push heroku master
-            heroku run rake db:migrate
+            git push heroku master:master
             sleep 5  # sleep for 5 seconds to wait for dynos
             heroku restart
 
@@ -42,3 +53,12 @@ workflows:
       - deploy:
           requires:
             - build
+          filters:
+            branches:
+              only: master
+  feature-branch:
+    jobs:
+      -features:
+        filters:
+          branches:
+            only: /jcarter*/
