--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "express": "^4.16.3",
     "mongoose": "^5.0.10",
     "passport": "^0.4.0",
-    "passport-google-oauth20": "^1.0.0"
+    "passport-google-oauth20": "^1.0.0",
+    "passport-linkedin-oauth2": "^1.5.0"
   },
   "devDependencies": {
     "concurrently": "^3.5.1",
