--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "mongoose": "^5.0.10",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
-    "passport-linkedin-oauth2": "^1.5.0"
+    "passport-linkedin-oauth2": "^1.5.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "concurrently": "^3.5.1",
