--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "1.1.1",
     "react-slick": "^0.21.0",
     "redux": "^3.7.2",
+    "redux-form": "^7.3.0",
     "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.3.0",
     "semantic-ui-react": "^0.78.3",
