--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "^4.16.3",
     "mongoose": "^5.0.10",
     "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
     "passport-google-oauth20": "^1.0.0",
     "passport-linkedin-oauth2": "^1.5.0",
     "passport-local": "^1.0.0"
