correct git remote heroku app name

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
       - run:
           name: Deploy Master to Heroku
           command: |  # this command is framework-dependent and may vary
-            heroku git:remote -a HEROKU_APP_NAME
+            heroku git:remote -a $HEROKU_APP_NAME
             git push --force https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git HEAD:refs/heads/master
             sleep 5  # sleep for 5 seconds to wait for dynos
             heroku restart
@@ -39,3 +39,6 @@ workflows:
           filters:
             branches:
               only: master
+
+
+              e59707b0-947d-4c92-aa45-2833e8c6e0de
