--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bcrypt": "^2.0.1",
+    "google-maps-react": "^2.0.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-parallax": "^1.6.1",
