--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bcrypt": "^3.0.1",
     "body-parser": "^1.18.2",
     "cookie-session": "^2.0.0-beta.3",
+    "escape-string-regexp": "^1.0.5",
     "express": "^4.16.3",
     "mongoose": "^5.0.10",
     "passport": "^0.4.0",
