--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "business marketplace application",
   "main": "index.js",
+  "engines": {
+    "node": "10.8.0",
+    "npm": "6.2.0"
+  },
   "scripts": {
     "scripts": "test",
     "start": "node index.js",
@@ -28,9 +32,10 @@
   },
   "homepage": "https://github.com/dlowkeen/rhiz#readme",
   "dependencies": {
-    "bcrypt": "^2.0.1",
+    "bcrypt": "^3.0.1",
     "body-parser": "^1.18.2",
     "cookie-session": "^2.0.0-beta.3",
+    "escape-string-regexp": "^1.0.5",
     "express": "^4.16.3",
     "mongoose": "^5.0.10",
     "passport": "^0.4.0",
